--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using MovieCloud
 @using MovieCloud.Models
-@using MovieLab.ViewModels
+@using MovieCloud.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
