--- a/Views/Reviews/Index.cshtml
+++ b/Views/Reviews/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MovieLab.Models.Review>
+﻿@model IEnumerable<MovieCloud.Models.Review>
 
 @{
     ViewData["Title"] = "Reviews Index";
